# juncto

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.js  conference.js  config.js  globals.d.ts  globals.native.d.ts  index.html  interface_config.js  manifest.json  package-lock.json  package.json  react-native.config.js  title.html  webpack.config.js
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  config.yml
.github/workflows/: ci.yml  rust-ci.yml
android/: README.md  build.gradle
android/app/: build.gradle  proguard-rules.pro
android/fastlane/: Fastfile
android/scripts/: logcat.sh  release-sdk.sh
android/sdk/: build.gradle
css/: _base.scss  _chat.scss  _meter.scss  _participants-pane.scss  _recording.scss  _welcome_page.scss
debian/: changelog  control  copyright  juncto-meet-prosody.README.Debian  juncto-meet-prosody.docs  juncto-meet-prosody.install  juncto-meet-prosody.postinst  juncto-meet-prosody.postrm  juncto-meet-prosody.templates  juncto-meet-tokens.README.Debian  juncto-meet-tokens.config  juncto-meet-tokens.postinst  juncto-meet-tokens.postrm  juncto-meet-tokens.templates  juncto-meet-turnserver.install  juncto-meet-turnserver.postinst  juncto-meet-turnserver.postrm  juncto-meet-turnserver.templates  juncto-meet-web-config.dirs  juncto-meet-web-config.docs  juncto-meet-web-config.install  juncto-meet-web-config.postinst  juncto-meet-web-config.postrm  juncto-meet-web-config.templates  juncto-meet-web.README.Debian  juncto-meet-web.install  rules  watch
debian/po/: POTFILES.in  templates.pot
doc/: README.md  api.md  quick-install.md
doc/examples/: api.html
doc/junctoservice/: README.md  index-junctoservice.html  juncto.vc-config.js  move-to-junctoservice.sh  nginx-junctoservice.conf  update-asap-daily.sh
ios/: Podfile  README.md  apple-app-site-association
ios/app/: app.entitlements
ios/fastlane/: Appfile  Fastfile
ios/scripts/: release-sdk-lite.sh  release-sdk.sh
lang/: main-af.json  main-ar.json  main-be.json  main-bg.json  main-ca.json  main-cs.json  main-da.json  main-de.json  main-dsb.json  main-el.json  main-eo.json  main-es-US.json  main-es.json  main-et.json  main-eu.json  main-fa.json  main-fi.json  main-fr-CA.json  main-fr.json  main-gl.json  main-he.json  main-hi.json  main-hr.json  main-hsb.json  main-hu.json  main-id.json  main-is.json  main-it.json  main-ja.json  main-kab.json  main-kk.json  main-ko.json  main-lt.json  main-lv.json  main-ml.json  main-mn.json  main-mr.json  main-nl.json  main-no.json  main-oc.json  (+19 more)
metadata/en-US/: full_description.txt
metadata/ru/: full_description.txt
modules/API/: API.js  constants.js
modules/UI/: UI.js
modules/recorder/: Recorder.js
react/: .eslintrc.js  index.native.js  index.web.js
react-native-sdk/: README.md  index.tsx  juncto-meet-rnsdk.podspec  package.json  prepare_sdk.js  sdk_instructions.js
resources/: cloud-api.swagger  coturn-le-update.sh  file-sharing.yaml  install-letsencrypt-cert.sh  register-junctoservice-account.sh  update-ljm.sh
rust-app/: .gitignore  build.sh
rust-app/backend/: Cargo.toml
rust-app/backend/src/: api.rs  db.rs  main.rs  tests.rs
rust-app/frontend/: Cargo.toml  index.html
rust-app/frontend/public/: video_processor.js
rust-app/frontend/src/: chat.rs  components.rs  connection_stats.rs  lib.rs  media.rs  participants.rs  polls.rs  prejoin.rs  reactions.rs  settings.rs  shortcuts.rs  speaker_stats.rs  state.rs  toolbox.rs  utils.rs  video_processor.rs  virtual_background.rs  whiteboard.rs
rust-app/frontend/src/components_ui/: breakout.rs  feedback.rs  file_sharing.rs  lobby.rs  mod.rs  toast.rs  video_grid.rs
rust-app/frontend/src/pages/: home.rs  room.rs
static/: dialInInfo.html  prejoin.html  whiteboard.html
tests/: .eslintrc.js  env.example  wdio.conf.ts
twa/: twa-manifest.json
(+618 files in other folders)
