[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
shared = { path = "../shared" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
urlencoding = "2.1"

[lib]
crate-type = ["cdylib", "rlib"]
